--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-# enter open ai api key here then rename the file .env
+# Make a file called .env that looks like this file (with a real api key)
 OPENAI_API_KEY=sk-123
