update env file

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
 # Make a file called .env that looks like this file (with a real api key)
+# OpenAI
 OPENAI_API_KEY=sk-123
+# Postgres
+POSTGRES_HOST=awesome-hw.sdsc.edu
+POSTGRES_PORT=5432
+POSTGRES_DATABASE=nourish
+POSTGRES_USER=user
+POSTGRES_PASSWORD="password"
