--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ SpacyProcessing/__pycache__/spacy_processor.cpython-313.pyc
 run1
 run2
 single_run/results_async.csv
+batches/results_part_*
+batches/batch_results_all.csv
