--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ single_run/results_async.csv
 batches/results_part_*
 batches/batch_results_all.csv
 combine_data/mapped_responses.csv
+single_run/results_async.csv
