moved batch stuff and finalize products but still need to test

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ SpacyProcessing/__pycache__/spacy_processor.cpython-313.pyc
 run1
 run2
 single_run/results_async.csv
-batches/results_part_*
-batches/batch_results_all.csv
-combine_data/mapped_responses.csv
+llm_processing/batches/results_part_*
+llm_processing/batches/batch_results_all.csv
+llm_processing/finalize_products/mapped_responses.csv
 single_run/results_async.csv
