update many files for consistent data

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Make a file called .env that looks like this file (with a real api key)
+# Make a file called .env that looks like this file (with a real api key and login credentials)
 # OpenAI
 OPENAI_API_KEY=sk-123
 # Postgres
